--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <button type="button" class="calc-button">/</button>
                 <button type="button" class="calc-button">=</button>
                 <button type="button" class="calc-button">C</button>
+            </div>
         </div>
     </article>
     <script src="script.js"></script>
